# CPP_Learning_Code

chap-01/: 1-hello_world.cpp  2-parrot.cpp  3-array.cpp  4-calculator.cpp
chap-02/: 1-first_class.cpp  2-constructor.cpp  3-clone.cpp
chap-02/4-rectangle/: Rectangle.cpp  Rectangle.h
chap-02/5-polygon/: Polygon.cpp  Polygon.h
chap-03/: CMakeLists.txt  test.cpp
chap-03/1-lifespan/: Box.cpp
chap-04/1-hierarchy/: Intern.cpp
chap-04/2-farm/: Chicken.h  FarmHouse.cpp
chap-04/3-vehicles/: Car.h  Vehicle.h
tp-01/: CMakeLists.txt  compte-rendu.md  ex3.cpp  ex4.cpp  translator  translator.cpp
tp-02/: CMakeLists.txt  Clock.cpp  Clock.h  Compte-rendu.md  Event.h  MinuteHand.cpp  MinuteHand.h  Reminders.cpp  SecondHand.cpp  SecondHand.h  Test.cpp
tp-02/ex2/: Histogram.cpp  Histogram.h  main.cpp
tp-03/: CMakeLists.txt
tp-03/Pokemons/: PC.cpp  PC.h  Pokeball.cpp  Pokeball.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h
tp-04/PhoneCalls/: HomePhone.h  Main.cpp  MobilePhone.h  Person.h  Phone.h
tp-04/Shapes/: circle.hpp  line.hpp  line_seg.hpp  main.cpp  rectangle.hpp  shape.hpp
