add_executable(tp2-reminders
    Reminders.cpp
    Event.h
    Parsing.cpp
    Parsing.h
    MinuteHand.h
    MinuteHand.cpp
    SecondHand.h
    SecondHand.cpp
    Clock.h
    Clock.cpp
)

add_executable(tp2-Test
    Test.cpp
    MinuteHand.h
    MinuteHand.cpp
    SecondHand.h
    SecondHand.cpp
    Clock.h
    Clock.cpp
    )

add_executable(tp2-ex2 
    ./ex2/Histogram.h
    ./ex2/Histogram.cpp
    ./ex2/main.cpp
)